fix scrollbar

--- a/src/sass/components/_reviews.sass
+++ b/src/sass/components/_reviews.sass
@@ -28,6 +28,8 @@
     position: relative
     height: 100vh
     overflow-y: scroll
+    -ms-overflow-style: none
+    scrollbar-width: none
     &::-webkit-scrollbar
       width: 0px
       background: transparent
